before help from SO #1